# dawn

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md  repo_init.sh  testenv_init.sh
dawn/: CMakeLists.txt
dawn/apps/: CMakeLists.txt  Kconfig
dawn/apps/dawn/: CMakeLists.txt  Kconfig  dawn_debug.hxx  dawn_descriptor.cxx  dawn_main.cxx  dawn_parseargs.cxx  dawn_parseargs.hxx
dawn/cmake/: dawn_oot.cmake  yaml_generator.cmake
dawn/include/dawn/: dawn.hxx  debug.hxx  oot.hxx
dawn/include/dawn/common/: bindable.hxx  descobject.hxx  descriptor.hxx  generic_handler.hxx  handler.hxx  object.hxx  objectcfg.hxx  objectid.hxx  poll_loop.hxx  thread.hxx
dawn/include/dawn/dev/: descriptor.hxx  descswitch.hxx  inspector.hxx  shutdown.hxx
dawn/include/dawn/io/: adc_base.hxx  adc_fetch.hxx  adc_stream.hxx  adc_sync.hxx  battery.hxx  boardctl.hxx  buttons.hxx  capabilities.hxx  common.hxx  config.hxx  control.hxx  dac.hxx  ddata.hxx  descriptor.hxx  descselector.hxx  dummy.hxx  dummy_notify.hxx  encoder.hxx  encoder_index.hxx  factory.hxx  fileio.hxx  gnss.hxx  gpi.hxx  gpo.hxx  handler.hxx  idata.hxx  inotifier.hxx  leds.hxx  limits.hxx  lte_signal.hxx  notifier.hxx  notify_manager.hxx  pulsecount.hxx  pwm.hxx  rand.hxx  rgbled.hxx  sdata.hxx  sensor.hxx  sensor_producer.hxx  stream_notifier.hxx  (+9 more)
dawn/include/dawn/porting/: adc.hxx  board.hxx  buttons.hxx  can.hxx  config.hxx  crc.hxx  dac.hxx  encoder.hxx  fixedmath.hxx  gpio.hxx  group.hxx  leds.hxx  lte.hxx  memory.hxx  pulsecount.hxx  pwm.hxx  rgbled.hxx  sensors.hxx
dawn/include/dawn/prog/: adjust.hxx  bitpack.hxx  bitsplit.hxx  buffer.hxx  common.hxx  counter.hxx  dummy.hxx  expression.hxx  factory.hxx  gateway.hxx  handler.hxx  iirfilter.hxx  (+23 more)
dawn/src/: CMakeLists.txt  Kconfig  dawn.cxx  oot.cxx
dawn/src/common/: CMakeLists.txt  bindable.cxx  descobject.cxx  descriptor.cxx  object.cxx  objectcfg.cxx  objectid.cxx  thread.cxx
dawn/src/dev/: CMakeLists.txt  descriptor.cxx  descswitch.cxx  inspector.cxx  shutdown.cxx
dawn/src/io/: CMakeLists.txt  Kconfig  adc_base.cxx  adc_fetch.cxx  adc_stream.cxx  adc_sync.cxx  battery.cxx  boardctl.cxx  buttons.cxx  capabilities.cxx  common.cxx  config.cxx  control.cxx  dac.cxx  descriptor.cxx  descselector.cxx  dummy.cxx  dummy_notify.cxx  encoder.cxx  encoder_index.cxx  factory.cxx  fileio.cxx  gnss.cxx  gpi.cxx  gpo.cxx  handler.cxx  leds.cxx  limits.cxx  lte_signal.cxx  notifier.cxx  notify_manager.cxx  pulsecount.cxx  pwm.cxx  rand.cxx  rgbled.cxx  sensor.cxx  sensor_producer.cxx  stream_notifier.cxx  sysinfo.cxx  systime.cxx  (+6 more)
dawn/src/porting/: CMakeLists.txt
dawn/src/prog/: CMakeLists.txt  Kconfig  adjust.cxx  bitpack.cxx  bitsplit.cxx  bitwise.hxx  buffer.cxx  common.cxx  counter.cxx  dummy.cxx  expression.cxx  factory.cxx  gateway.cxx  handler.cxx  iodemux.cxx  iomux.cxx  manytoone.cxx  onetomany.cxx  process.cxx  redirect.cxx  sampling.cxx  selector.cxx  sequencer.cxx  switch.cxx  test_bitpack.cxx  test_bitsplit.cxx  test_counter.cxx  test_expression.cxx  test_selector.cxx  test_switch.cxx  test_toggle.cxx  toggle.cxx  vecpack.cxx  vecsplit.cxx
dawn/src/proto/: CMakeLists.txt  Kconfig  common.cxx  dummy.cxx  factory.cxx  handler.cxx  simplebase.cxx
dawn/src/system/: CMakeLists.txt  Kconfig  factory.cxx  gnss.cxx  handler.cxx  lte.cxx
dawn/tests/: CMakeLists.txt  Kconfig  dawntest_main.cxx  test_dawn.cxx  test_registry.cxx
dawn/tests/common/: CMakeLists.txt  test_bindable.cxx  test_descobject.cxx  test_descriptor.cxx  test_descswitch.cxx  test_handler.cxx  test_object.cxx  test_objectcfg.cxx  test_objectid.cxx  test_run.cxx  test_threaded.cxx
dawn/tests/dev/: CMakeLists.txt  test_descriptor.cxx  test_inspector.cxx  test_run.cxx
dawn/tests/include/: test_common.hxx  test_iomockcommon.hxx  test_mock_expect.hxx  test_mockhandler.hxx  test_progmockcommon.hxx  test_protomockcommon.hxx  test_registry.hxx
dawn/tests/io/: CMakeLists.txt  test_adc.cxx  test_battery.cxx  test_boardctl.cxx  test_buttons.cxx  test_capabilities.cxx  test_common.cxx  test_config.cxx  test_control.cxx  test_dac.cxx  test_data.cxx  test_descriptor.cxx  test_descselector.cxx  test_dummy.cxx  test_dummy_notify.cxx  test_encoder.cxx  test_encoder_index.cxx  test_factory.cxx  test_fileio.cxx  test_gpi.cxx  test_gpo.cxx  test_handler.cxx  test_leds.cxx  test_limits.cxx  test_notifier.cxx  test_pulsecount.cxx  test_pwm.cxx  test_rand.cxx  test_rgbled.cxx  test_run.cxx  test_sensor.cxx  test_sensor_producer.cxx  test_sysinfo.cxx  test_systime.cxx  test_timerfd.cxx  test_timestamp.cxx  test_trigger.cxx  test_uname.cxx  test_uuid.cxx  test_virt.cxx
dawn/tests/mocks/: fake_iomockcommon.hxx  fake_ioseekmock.hxx  fake_iowriteonlymock.hxx  fake_progmockcommon.hxx  fake_protomockcommon.hxx  spy_iomockcommon.hxx  spy_progmockcommon.hxx  spy_protomockcommon.hxx
dawn/tests/porting/: CMakeLists.txt  test_nuttx.cxx  test_run.cxx
dawn/tests/prog/: CMakeLists.txt  test_adjust.cxx  test_bitpack.cxx  test_bitsplit.cxx  test_buffer.cxx  test_common.cxx  test_counter.cxx  test_expression.cxx  test_factory.cxx  test_gateway.cxx  test_handler.cxx  test_iir_filter.cxx  test_iodemux.cxx  test_iomux.cxx  test_latest.cxx  test_manytoone.cxx  test_moving_avg.cxx  test_onetomany.cxx  test_process.cxx  test_process_common.cxx  test_process_common.hxx  test_redirect.cxx  test_run.cxx  test_sampling.cxx  test_selector.cxx  test_sequencer.cxx  test_stats_avg.cxx  test_stats_count.cxx  test_stats_max.cxx  test_stats_min.cxx  test_stats_rms.cxx  test_stats_sum.cxx  test_switch.cxx  test_threshold.cxx  test_toggle.cxx  test_vecpack.cxx  test_vecsplit.cxx
dawn/tests/proto/: CMakeLists.txt  test_can.cxx  test_common.cxx  test_factory.cxx  test_handler.cxx  test_ipc.cxx  test_modbus_rtu.cxx  test_modbus_tcp.cxx  test_nimble.cxx  test_nxscope_dummy.cxx  test_nxscope_serial.cxx  test_nxscope_udp.cxx  test_run.cxx  test_serial.cxx  test_shell.cxx  test_simple_proto_common.hxx  test_udp.cxx  test_wakaama.cxx
dawn/tests/system/: CMakeLists.txt  test_lte.cxx  test_run.cxx
(+638 files in other folders)
